<resources>
    <string name="app_name">SASP Store</string>
    <string name="title_home">خانه</string>
    <string name="title_dashboard">ناحیه کاربری</string>
    <string name="title_notifications">حراج‌ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">ناحیه‌ی کاربری</string>
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_password">کلمه‌ی عبور</string>
    <string name="action_sign_in">ورود</string>
    <string name="action_register">ثبت نام</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="welcome"> عزیز، خوش آمدید</string>
    <string name="invalid_username">نام کاربری معتبر نیست</string>
    <string name="invalid_password">کلمه‌ی عبور باید بیش از ۵ کاراکتر داشته باشد</string>
    <string name="login_failed">ورود با خطا مواجه شد</string>
    <string name="sign_in">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="user_exists">کاربر با این نام وجود دارد</string>
    <string name="sign_out">خروج از حساب</string>
    <string name="transaction_log">تاریخچه تراکنش‌ها</string>
    <string name="credit">اعتبار:</string>
    <string name="customer">مشتری</string>
    <string name="seller">فروشنده</string>
    <string name="admin">مدیر</string>
    <string name="username">نام کاربری</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="company_details">اطلاعات شرکت</string>
    <string name="profile_picture">عکس پروفایل</string>
    <string name="product_radio">محصول</string>
    <string name="file_radio">فایل</string>
    <string name="unlimited_file_download">دانلود به تعداد نامحدود</string>
</resources>