<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="@style/titleTexts"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/fragment_profile_usernameAndRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="@style/usualTexts"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/fragment_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="@style/usualTexts"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/fragment_profile_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="@style/usualTexts"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/fragment_profile_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:theme="@style/usualTexts"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/credit" />

    <LinearLayout
        android:id="@+id/profile_log_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_profile_log_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:theme="@style/usualTexts"
            android:layout_marginEnd="5dp"

            android:text="@string/transaction_log" />

        <ImageView
            android:id="@+id/fragment_profile_log_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_logout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_profile_logout_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:theme="@style/usualTexts"
            android:layout_marginRight="5dp"

            android:text="@string/sign_out" />

        <ImageView
            android:id="@+id/fragment_profile_logout_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>